Fix menu toggle position on mobile screen

--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -358,13 +358,14 @@ em {
       .submenu-toggle {
         position: absolute;
         left: 50%; top: 7px;
-        margin-left: 62px;
+        margin-left: 85px;
         width: 20px; height: 20px;
         display: none;
         background-image: url(../images/arrow-toggle.png);
         background-repeat: no-repeat; 
         background-position: center center;
         background-size: 15px 8px !important; 
+        padding: 0 !important;
       }
       
       &.current-menu-item, &.current-menu-ancestor {
